--- a/PackerTracker/Views/Items/Index.cshtml
+++ b/PackerTracker/Views/Items/Index.cshtml
@@ -10,9 +10,9 @@
       crossorigin="anonymous">
   </head>
   <body>
-    @using ToDoList.Models;
+    @using PackerTracker.Models;
 
-    <h1>To Do List</h1>
+    <h1>PackerTracker</h1>
     @if (Model.Count == 0)
     {
       <p>There are no items in the list.</p>
