--- a/PackerTracker/Views/Items/New.cshtml
+++ b/PackerTracker/Views/Items/New.cshtml
@@ -13,6 +13,8 @@
     <form action="/items" method="post">
       <label for="description">Add a new item</label>
       <input id="description" name="description" type="text">
+      <label for="weight">Please enter weight</label>
+      <input id="weight" name="weight" type="number">
       <button type="submit">Submit</button>
     </form>
   </body>
