--- a/PackerTracker/Views/Items/Show.cshtml
+++ b/PackerTracker/Views/Items/Show.cshtml
@@ -13,6 +13,7 @@
     <h1>To Do List Item Details: </h1>
 
     <h2>@Model.Description</h2>
+    <h2>@Model.Weight lbs</h2>
 
     <a href='/items/new'>Add another item</a>
     <a href='/items'>View all items</a>
